syntax = "proto2";
package com.sendkoin.api;

option java_package = "com.sendkoin.api";

message Customer {
    optional uint64 customer_id = 1;
    optional string full_name = 2;
    optional string email = 3;
}

message Merchant {
    optional uint64 merchant_id = 1;
    optional string merchant_name = 2;
    optional string store_location = 3;
    optional string phone_number = 4;
    optional string email_address = 5;
}

message FacebookAuthenticationRequest {
    optional string access_token = 1;
}

message AuthenticationResponse {
    optional string session_token = 1;
    oneof entity {
        Customer customer = 2;
        Merchant merchant = 3;
    }
}

message InitiateTransactionRequest {
    optional uint64 created_at = 1;
    /* Needed to implement idempotence and prevent replay attacks. */
    optional string idempotence_token = 2;
    repeated SaleItem sale_items = 3;
}

message InitiateTransactionResponse {
    /* The token uniquely identifying this tranasction. */
    optional string transaction_token = 1;
    optional Status status = 2;
}

message AcceptTransactionRequest {
    optional uint64 created_at = 1;
    optional string idempotence_token = 2;
    optional string transaction_token = 3;
}

message AcceptTransactionResponse {
    optional Status status = 1;
}

message ListTransactionsResponse {
    repeated Transaction transactions = 1;
    optional bool has_next_page = 2;
}

message Transaction {
    optional string token = 1;
    optional uint64 created_at = 2;
    optional uint64 merchant_id = 3;
    optional string merchant_name = 4;
    optional uint32 amount = 5;
    optional string state = 6;
}

message SaleItem {
    optional uint64 item_id = 1;
    optional string name = 2;
    optional uint32 price = 3;
    optional SaleType sale_type = 4;

    enum SaleType {
        INVENTORY = 1;
        QUICK_SALE = 2;
    }
}

message Status {
    optional Result result = 1;
    optional string error_message = 2;

    enum Result {
        SUCCESS = 0;
        FAILURE = 1;
    }
}